--- a/main.css
+++ b/main.css
@@ -89,6 +89,32 @@ main {
     padding-right: 50px;
 }
 
+/* ---- Loading ---- */
+.loading {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0a2d81;
+    animation: loading 2s 1s forwards;
+}
+
+@keyframes loading {
+    from {
+        height: 100%;
+    }
+    to {
+        height: 0%;
+        opacity: 0;
+    }
+}
+
+.loading img {
+    width: 300px;
+}
+
 /* ---- Media Querys ---- */
 @media (max-width: 1000px) {
     main {
